--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -392,21 +392,30 @@
       },
       "schedule": {
         "herotitle": "Schedule",
+        "pdfLink": "/PDF/program.pdf",
         "days": [
           {
             "date": "27th January 2025",
             "location": "Balexert Geneva",
-            "planning-pic": "/schedule_pics/27.01.25.png"
+            "planning-pic": [
+              "/schedule_pics/27.png"
+            ]
           },
           {
             "date": "28th January 2025",
             "location": "Balexert Geneva",
-            "planning-pic": "/schedule_pics/28.01.25.png"
+            "planning-pic": [
+              "/schedule_pics/28m.png",
+              "/schedule_pics/28a.png"
+            ]
           },
           {
             "date": "29th January 2025",
             "location": "EHL Lausanne",
-            "planning-pic": "/schedule_pics/29.01.25.jpg"
+            "planning-pic": [
+              "/schedule_pics/29m.png",
+              "/schedule_pics/29a.png"
+            ]
           }
         ]
       },
