--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -80,7 +80,7 @@
           ],
           "end": "Participation is free, but registration is mandatory."
         },
-        "register": "Register now to the conference and workshops"
+        "register": "Register now to the conference (SOLD OUT)"
       },
       "call-for-paper": {
         "title": "Call for Paper",
