--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -80,7 +80,7 @@
           ],
           "end": "La participation est gratuite, mais l’inscription est obligatoire."
         },
-        "register": "S'inscrire à la conférence (et aux workshops)"
+        "register": "S'inscrire à la conférence (COMPLET)"
       },
       "call-for-paper": {
         "title": "Call for Paper",
