--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -460,6 +460,13 @@
               "title": "AI for SME - How to get started and overcome key challenges?",
               "para": "In today's digital landscape, Artificial Intelligence (AI) is a powerful tool for SMEs seeking innovation and growth. This presentation demystifies AI, cutting through the hype. By exploring fundamental concepts, we clarify what AI can and can't do. We’ll guide SMEs on how to initiate AI projects through both top-down and bottom-up approaches, using frameworks like the impact-feasibility matrix and the data initiative canvas. Additionally, we address key challenges in AI adoption, discussing various dimensions such as data quality, people skills, change management and offering actionable tips to overcome them.",
               "photo": "/speaker_pics/sandro-saitta.png"
+            },
+            {
+              "name": "Nabil Abdennadher, HES-SO, HEPIA",
+              "bio": "Nabil Abdennadher is Full Professor University of Applied Sciences, Western Switzerland (HES-SO, HEPIA). Nabil Abdennadher was head of the inIT research institute at HEPIA from 2010 to 2022. He is currently head of the Large-Scale Distributed Systems research group, representative of the Innovation DataBooster initiative in Swiss Romandie and member of the Editorial Board of the Journal of Reliable Intelligent Environments.",
+              "title": "Towards an AI-based edge-to-cloud framework for digital energy services",
+              "para": "New forms of electricity production and consumption are disrupting the energy market. Along the same lines, digital transformation is reshaping the electricity market. To name a few, internet of things, edge-to-cloud computing and AI techniques will allow the proliferation of intelligent versions of today's “smart meter”. We can expect that, soon, new “digital energy services” will emerge. These services will rely on an AI-based edge-to-cloud framework. This framework must support IT technology such as Internet of Things (to collect and gather data), Artificial Intelligence (to set up predictive models and self-adapt), Cloud and Edge computing (to store and process data), collaborative models to insure collaboration, etc.\n\nThis presentation details the different components of the ML-based edge-to-cloud framework developed within two European projects: SWARM and LASAGNE.",
+              "photo": "/speaker_pics/NA.jpg"
             }
           ]
         },
