Add committee role for Jean-Gabriel Piguet

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -530,6 +530,7 @@
             {
               "name": "Jean-Gabriel Piguet",
               "position": "Service d’éthique appliquée, HES-SO Valais-Wallis",
+              "committee_role": "Ethics review only",
               "bio": "Jean-Gabriel Piguet first worked as a legislative advisor on health in the French Senate and as a professor of philosophy and political science in the Paris region and in the canton of Fribourg. Since 2018, he has been head of the Service d'Éthique Appliquée at the HES-SO Valais-Wallis and associate researcher in moral philosophy at the Institut Interdisciplinaire des Droits de l'Homme at the University of Fribourg. He is actively involved in training and research on digital and health ethics at both institutions.",
               "photo": "/speaker_pics/jean-gabriel-piguet.png"
             },
