Add committee role for Jean-Gabriel Piguet

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -530,6 +530,7 @@
             {
               "name": "Jean-Gabriel Piguet",
               "position": "Service d’éthique appliquée, HES-SO Valais-Wallis",
+              "committee_role": "Ethics review only",
               "bio": "Jean-Gabriel Piguet a tout d'abord travaillé comme conseiller législatif en santé au Sénat français et comme professeur de philosophie et de sciences politiques en région parisienne et dans le canton de Fribourg. Il est responsable depuis 2018 du Service d'Éthique Appliquée de la HES-SO Valais-Wallis et chercheur associé en philosophie morale à l'Institut Interdisciplinaire des Droits de l'Homme de l'Université de Fribourg. Il participe activement dans ces deux établissements à la formation et à la recherche sur les thématiques de l'éthique du numérique et de la santé.",
               "photo": "/speaker_pics/jean-gabriel-piguet.png"
             },
